# th06-sdl2

./: .gitignore  AGENT.md  AI_CHANGELOG.md  AI_MEMORY.md  AI_STATUS.md  ANDROID_TOUCH_PORT_PLAN.md  CMakeLists.txt  README.md  THPRAC_DESIGN.md  gb18030_ranges.txt  ref_classes.txt  ref_ehooks.txt  ref_locale_data.txt  ref_thpatch.txt  thprac.code-workspace  thprac_th06_old.cpp  thprac报告
.github/: copilot-instructions.md
.github/workflows/: build.yml
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/th06/game/: CompatTouchOverlay.java  GamePerformanceService.java  SessionLogCollector.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/res/xml/: game_mode_config.xml  shortcuts_game.xml
shaders_vk/: f_color.frag  f_textured.frag  v_diffuse_xyzrwh.vert  v_render_vertex_info.vert  v_tex1_diffuse_xyz.vert  v_tex1_diffuse_xyz_clip.vert  v_tex1_diffuse_xyzrwh.vert  v_tex1_xyzrwh.vert
src/: AndroidTouchInput.cpp  AndroidTouchInput.hpp  AnmIdx.hpp  AnmManager.cpp  AnmManager.hpp  AnmVm.hpp  AsciiManager.cpp  AsciiManager.hpp  AssetIO.cpp  AssetIO.hpp  AstroBot.cpp  AstroBot.hpp  AstroBotEclForecast.cpp  AstroBotEclForecast.hpp  BackendAvailability.cpp  BombData.cpp  BulletManager.cpp  CMyFont.cpp  CMyFont.hpp  Chain.cpp  Chain.hpp  Controller.cpp  Controller.hpp  CrashHandler.hpp  CrashHandlerPosix.cpp  CrashHandlerWin.cpp  EclManager.cpp  EclManager.hpp  EffectManager.cpp  Ending.cpp  Enemy.hpp  EnemyEclInstr.cpp  EnemyEclInstr.hpp  EnemyManager.cpp  EnemyManager.hpp  FileSystem.cpp  FileSystem.hpp  GameErrorContext.cpp  GameErrorContext.hpp  GameManager.cpp  (+114 more)
src/pbg3/: FileAbstraction.cpp  FileAbstraction.hpp  IPbg3Parser.hpp  Pbg3Archive.cpp  Pbg3Archive.hpp  Pbg3Parser.cpp  Pbg3Parser.hpp
src/vulkan/: VkContext.cpp  VkContext.hpp  VkFrameContext.cpp  VkFrameContext.hpp  VkPipelineCache.cpp  VkPipelineCache.hpp  VkPipelineKey.hpp  VkRenderTarget.cpp  VkRenderTarget.hpp  VkResources.cpp  VkResources.hpp  VkSwapchain.cpp  VkSwapchain.hpp  VkTextureManager.cpp  VkTextureManager.hpp  VmaUsage.cpp  VmaUsage.hpp
tools/: vk_smoketest.cpp
tools/relay_service/: README.md  install.sh  th06_relay_server.py  upload.py
