###############################################################################
# th06 Android Build - CMakeLists.txt
#
# This file is used by the Android Gradle build (app/jni/CMakeLists.txt).
# It builds SDL2, SDL2_image, SDL2_mixer from source and links the game
# as a shared library named "main" (required by SDLActivity).
#
# This does NOT modify the top-level CMakeLists.txt used for Windows/Linux.
###############################################################################

cmake_minimum_required(VERSION 3.6)
project(th06_android LANGUAGES CXX C)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Root of the th06 project (three levels up from android/app/jni/)
get_filename_component(TH06_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../.." ABSOLUTE)

# ============================================================================
# SDL2 libraries (build from source)
# ============================================================================
set(SDL2_SRC_DIR    "${TH06_ROOT}/android/SDL2_src")
set(SDL2_IMAGE_DIR  "${TH06_ROOT}/android/SDL2_image_src")
set(SDL2_MIXER_DIR  "${TH06_ROOT}/android/SDL2_mixer_src")

# SDL2 core
add_subdirectory(${SDL2_SRC_DIR} SDL2)

# SDL2_image (needs SDL2 headers)
set(SDL2IMAGE_SAMPLES OFF CACHE BOOL "" FORCE)
set(SDL2IMAGE_INSTALL OFF CACHE BOOL "" FORCE)
set(SDL2IMAGE_VENDORED OFF CACHE BOOL "" FORCE)
set(SDL2IMAGE_AVIF OFF CACHE BOOL "" FORCE)
set(SDL2IMAGE_WEBP OFF CACHE BOOL "" FORCE)
add_subdirectory(${SDL2_IMAGE_DIR} SDL2_image)

# SDL2_mixer — disable all optional codec libraries for Android
set(SDL2MIXER_SAMPLES OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_INSTALL OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_VENDORED OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_FLAC OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_MOD OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_OPUS OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_MIDI OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_MIDI_FLUIDSYNTH OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_MP3 OFF CACHE BOOL "" FORCE)
set(SDL2MIXER_WAVPACK OFF CACHE BOOL "" FORCE)
add_subdirectory(${SDL2_MIXER_DIR} SDL2_mixer)

# ============================================================================
# i18n.hpp generation (same as main build)
# ============================================================================
set(I18N_TPL "${TH06_ROOT}/src/i18n.tpl")
set(I18N_HPP "${TH06_ROOT}/build/autogenerated/i18n.hpp")

find_program(TH06_PYTHON NAMES python3 python)
if(TH06_PYTHON AND EXISTS "${I18N_TPL}")
    add_custom_command(
        OUTPUT "${I18N_HPP}"
        COMMAND ${CMAKE_COMMAND} -E make_directory "${TH06_ROOT}/build/autogenerated"
        COMMAND ${TH06_PYTHON} "${TH06_ROOT}/scripts/gen_i18n.py"
            "${I18N_TPL}" "${I18N_HPP}" "utf-8"
        DEPENDS "${I18N_TPL}" "${TH06_ROOT}/scripts/gen_i18n.py"
        COMMENT "Generating i18n.hpp (UTF-8)"
    )
    add_custom_target(generate_i18n DEPENDS "${I18N_HPP}")
endif()

# ============================================================================
# Game shared library (must be named "main" for SDLActivity)
# ============================================================================
set(TH06_GAME_SOURCES
    ${TH06_ROOT}/src/main.cpp
    ${TH06_ROOT}/src/AndroidTouchInput.cpp
    ${TH06_ROOT}/src/TouchVirtualButtons.cpp
    ${TH06_ROOT}/src/MenuTouchButtons.cpp
    ${TH06_ROOT}/src/AnmManager.cpp
    ${TH06_ROOT}/src/AsciiManager.cpp
    ${TH06_ROOT}/src/AstroBot.cpp
    ${TH06_ROOT}/src/AstroBotEclForecast.cpp
    ${TH06_ROOT}/src/BombData.cpp
    ${TH06_ROOT}/src/BulletData.cpp
    ${TH06_ROOT}/src/BulletManager.cpp
    ${TH06_ROOT}/src/Chain.cpp
    ${TH06_ROOT}/src/CMyFont.cpp
    ${TH06_ROOT}/src/Controller.cpp
    ${TH06_ROOT}/src/EclManager.cpp
    ${TH06_ROOT}/src/EffectManager.cpp
    ${TH06_ROOT}/src/Ending.cpp
    ${TH06_ROOT}/src/EnemyEclInstr.cpp
    ${TH06_ROOT}/src/EnemyManager.cpp
    ${TH06_ROOT}/src/FileSystem.cpp
    ${TH06_ROOT}/src/GameErrorContext.cpp
    ${TH06_ROOT}/src/GameManager.cpp
    ${TH06_ROOT}/src/GamePaths.cpp
    ${TH06_ROOT}/src/GameplayState.cpp
    ${TH06_ROOT}/src/GameplayStateBridge.cpp
    ${TH06_ROOT}/src/GameplayStateAudit.cpp
    ${TH06_ROOT}/src/GameplayStatePortable.cpp
    ${TH06_ROOT}/src/GameplayStateCodec.cpp
    ${TH06_ROOT}/src/GameplayStateValidation.cpp
    ${TH06_ROOT}/src/GameplayWorldBuilder.cpp
    ${TH06_ROOT}/src/GameWindow.cpp
    ${TH06_ROOT}/src/Gui.cpp
    ${TH06_ROOT}/src/ItemManager.cpp
    ${TH06_ROOT}/src/MainMenu.cpp
    ${TH06_ROOT}/src/MidiOutput.cpp
    ${TH06_ROOT}/src/MusicRoom.cpp
    ${TH06_ROOT}/src/NetplaySession.cpp
    ${TH06_ROOT}/src/NetplayAuthoritativeSession.cpp
    ${TH06_ROOT}/src/NetplayAuthoritativeTransport.cpp
    ${TH06_ROOT}/src/NetplayAuthoritativeReplicator.cpp
    ${TH06_ROOT}/src/NetplayAuthoritativePresentation.cpp
    ${TH06_ROOT}/src/NetplayDiagnostics.cpp
    ${TH06_ROOT}/src/NetplayConsistency.cpp
    ${TH06_ROOT}/src/NetplayShell.cpp
    ${TH06_ROOT}/src/NetplayTransport.cpp
    ${TH06_ROOT}/src/NetplayUiSync.cpp
    ${TH06_ROOT}/src/NetplayRollback.cpp
    ${TH06_ROOT}/src/NetplayRecovery.cpp
    ${TH06_ROOT}/src/NetplayRecoveryHeuristicsDisabled.cpp
    ${TH06_ROOT}/src/OnlineMenu.cpp
    ${TH06_ROOT}/src/Player.cpp
    ${TH06_ROOT}/src/PortableGameplayRestore.cpp
    ${TH06_ROOT}/src/PortableSnapshotStorage.cpp
    ${TH06_ROOT}/src/ReplayManager.cpp
    ${TH06_ROOT}/src/ResultScreen.cpp
    ${TH06_ROOT}/src/Rng.cpp
    ${TH06_ROOT}/src/ScreenEffect.cpp
    ${TH06_ROOT}/src/Session.cpp
    ${TH06_ROOT}/src/SinglePlayerSnapshot.cpp
    ${TH06_ROOT}/src/SoundPlayer.cpp
    ${TH06_ROOT}/src/Stage.cpp
    ${TH06_ROOT}/src/Supervisor.cpp
    ${TH06_ROOT}/src/TextHelper.cpp
    ${TH06_ROOT}/src/utils.cpp
    ${TH06_ROOT}/src/CrashHandlerPosix.cpp
    ${TH06_ROOT}/src/WatchdogPosix.cpp
    ${TH06_ROOT}/src/ZunTimer.cpp
    ${TH06_ROOT}/src/zwave.cpp
    # GLES renderer only (no fixed-function RendererGL on Android)
    ${TH06_ROOT}/src/RendererGLES.cpp
    # Phase 5b.3: backend probe + availability clamping (cross-platform)
    ${TH06_ROOT}/src/BackendAvailability.cpp
    # sdl2_renderer.cpp is EXCLUDED: uses GL 1.x fixed-function calls
    # pbg3 archive
    ${TH06_ROOT}/src/pbg3/FileAbstraction.cpp
    ${TH06_ROOT}/src/pbg3/IPbg3Parser.cpp
    ${TH06_ROOT}/src/pbg3/Pbg3Archive.cpp
    ${TH06_ROOT}/src/pbg3/Pbg3Parser.cpp
    # thprac
    ${TH06_ROOT}/src/thprac_th06.cpp
    ${TH06_ROOT}/src/thprac_games.cpp
    ${TH06_ROOT}/src/thprac_gui_components.cpp
    ${TH06_ROOT}/src/thprac_gui_locale.cpp
    ${TH06_ROOT}/src/thprac_gui_input.cpp
    ${TH06_ROOT}/src/thprac_locale_def.cpp
    ${TH06_ROOT}/src/thprac_gui_integration.cpp
    # ImGui core
    ${TH06_ROOT}/3rdparty/imgui/imgui.cpp
    ${TH06_ROOT}/3rdparty/imgui/imgui_draw.cpp
    ${TH06_ROOT}/3rdparty/imgui/imgui_tables.cpp
    ${TH06_ROOT}/3rdparty/imgui/imgui_widgets.cpp
    ${TH06_ROOT}/3rdparty/zstd/single_file/zstd.c
    # ImGui SDL2 + OpenGL3/ES backend (NOT opengl2 — it uses fixed-function)
    ${TH06_ROOT}/3rdparty/imgui/imgui_impl_sdl.cpp
    ${TH06_ROOT}/3rdparty/imgui/imgui_impl_opengl3.cpp
)

add_library(main SHARED ${TH06_GAME_SOURCES})

# Android define + GLES
target_compile_definitions(main PRIVATE
    TH06_USE_GLES=1
    TH06_ANDROID=1
    TH06_ENABLE_PREDICTION_ROLLBACK=0
)

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_compile_definitions(main PRIVATE TH06_ECL_TRACE=1)
endif()

# Clang flags matching the main CMakeLists.txt GCC/Clang section
target_compile_options(main PRIVATE
    -fsigned-char            # ARM defaults char to unsigned; match x86 signed behavior
    -fpermissive             # Allow MSVC-compatible syntax (extra qualification, etc.)
    -Wno-extra-qualification
    -Wno-unknown-pragmas
    -Wno-address-of-temporary  # MSVC allows taking address of temporaries
    -Wno-format-security       # NDK promotes this to error; project has safe patterns
)

if(CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
    target_compile_options(main PRIVATE -Wno-changes-meaning)
endif()

target_include_directories(main PRIVATE
    ${TH06_ROOT}/src
    ${TH06_ROOT}/build/autogenerated
    ${TH06_ROOT}/3rdparty/rapidjson/include
    ${TH06_ROOT}/3rdparty/imgui
    ${TH06_ROOT}/3rdparty/zstd
)

# i18n dependency
if(TARGET generate_i18n)
    add_dependencies(main generate_i18n)
endif()

# Find Android system libraries
find_library(log-lib log)
find_library(GLESv2-lib GLESv2)
find_library(android-lib android)

target_link_libraries(main PRIVATE
    SDL2::SDL2
    SDL2_image::SDL2_image
    SDL2_mixer::SDL2_mixer
    ${log-lib}
    ${GLESv2-lib}
    ${android-lib}
)

# ============================================================================
# Vulkan backend (optional, Phase 5b.3)
#
# Android NDK r24+ ships <vulkan/vulkan.h> in the sysroot and libvulkan.so
# on devices that support it. We use vendored volk to runtime-load symbols
# (matches desktop behaviour) and vendored VMA for allocations. SPIR-V is
# generated on the host with glslangValidator (Vulkan SDK) and copied into
# app/src/main/assets/shaders_vk/ so SDL_RWFromFile can stream it from the
# APK at runtime.
#
# Toggle off if the NDK / device lacks Vulkan:
#   -DTH06_USE_VULKAN_ANDROID=OFF
# ============================================================================
option(TH06_USE_VULKAN_ANDROID "Build Vulkan backend on Android" ON)

if(TH06_USE_VULKAN_ANDROID)
    set(TH06_VOLK_DIR "${TH06_ROOT}/3rdparty/volk")
    set(TH06_VMA_DIR  "${TH06_ROOT}/3rdparty/Vulkan/include")

    if(NOT EXISTS "${TH06_VOLK_DIR}/volk.h")
        message(WARNING "TH06_USE_VULKAN_ANDROID: ${TH06_VOLK_DIR}/volk.h missing — disabling Vulkan")
        set(TH06_USE_VULKAN_ANDROID OFF)
    elseif(NOT EXISTS "${TH06_VMA_DIR}/vma/vk_mem_alloc.h")
        message(WARNING "TH06_USE_VULKAN_ANDROID: ${TH06_VMA_DIR}/vma/vk_mem_alloc.h missing — disabling Vulkan")
        set(TH06_USE_VULKAN_ANDROID OFF)
    endif()
endif()

if(TH06_USE_VULKAN_ANDROID)
    target_sources(main PRIVATE
        ${TH06_ROOT}/src/RendererVulkan.cpp
        ${TH06_ROOT}/src/vulkan/VkContext.cpp
        ${TH06_ROOT}/src/vulkan/VkSwapchain.cpp
        ${TH06_ROOT}/src/vulkan/VkFrameContext.cpp
        ${TH06_ROOT}/src/vulkan/VkRenderTarget.cpp
        ${TH06_ROOT}/src/vulkan/VkPipelineCache.cpp
        ${TH06_ROOT}/src/vulkan/VkResources.cpp
        ${TH06_ROOT}/src/vulkan/VmaUsage.cpp
        ${TH06_ROOT}/src/vulkan/VkTextureManager.cpp
        ${TH06_VOLK_DIR}/volk.c
        ${TH06_ROOT}/3rdparty/imgui/imgui_impl_vulkan.cpp
    )
    target_include_directories(main PRIVATE
        ${TH06_VOLK_DIR}
        ${TH06_VMA_DIR}
    )
    target_compile_definitions(main PRIVATE
        TH06_USE_VULKAN=1
        VK_NO_PROTOTYPES=1
        VK_USE_PLATFORM_ANDROID_KHR=1
        TH06_HAS_IMGUI=1   # Phase 5b.2: enables ImGui Vulkan integration in RendererVulkan
    )

    # --- Compile SPIR-V via host glslangValidator and stage into APK assets ---
    find_program(TH06_GLSLANG glslangValidator HINTS
        "$ENV{VULKAN_SDK}/Bin"
        "$ENV{VULKAN_SDK}/bin"
    )
    if(NOT TH06_GLSLANG)
        message(WARNING "TH06_USE_VULKAN_ANDROID: glslangValidator not found on host; "
                        "shaders won't be (re)compiled. Pre-built .spv must already be present in "
                        "app/src/main/assets/shaders_vk/.")
    else()
        message(STATUS "TH06_USE_VULKAN_ANDROID: glslangValidator = ${TH06_GLSLANG}")
        set(TH06_VK_SHADER_SRC_DIR "${TH06_ROOT}/shaders_vk")
        set(TH06_VK_SHADER_OUT_DIR "${TH06_ROOT}/android/app/src/main/assets/shaders_vk")
        file(MAKE_DIRECTORY "${TH06_VK_SHADER_OUT_DIR}")
        set(TH06_VK_SHADER_NAMES
            v_diffuse_xyzrwh.vert
            v_tex1_xyzrwh.vert
            v_tex1_diffuse_xyzrwh.vert
            v_tex1_diffuse_xyz.vert
            v_render_vertex_info.vert
            f_color.frag
            f_textured.frag
        )
        set(TH06_VK_SHADER_SPV "")
        foreach(_sh IN LISTS TH06_VK_SHADER_NAMES)
            set(_in  "${TH06_VK_SHADER_SRC_DIR}/${_sh}")
            set(_out "${TH06_VK_SHADER_OUT_DIR}/${_sh}.spv")
            add_custom_command(
                OUTPUT  "${_out}"
                COMMAND ${TH06_GLSLANG} -V "${_in}" -o "${_out}"
                DEPENDS "${_in}"
                COMMENT "glslang -> ${_sh}.spv (android assets)"
                VERBATIM
            )
            list(APPEND TH06_VK_SHADER_SPV "${_out}")
        endforeach()
        add_custom_target(th06_vk_shaders_android DEPENDS ${TH06_VK_SHADER_SPV})
        add_dependencies(main th06_vk_shaders_android)
    endif()

    find_library(vulkan-lib vulkan)
    if(vulkan-lib)
        # volk uses dlopen("libvulkan.so") so linking isn't strictly required,
        # but having the import means the loader is in the dependency graph.
        target_link_libraries(main PRIVATE ${vulkan-lib})
    endif()

    message(STATUS "TH06_USE_VULKAN_ANDROID: Vulkan backend enabled")
endif()
